--- a/js/site/styles/tailwind.css
+++ b/js/site/styles/tailwind.css
@@ -26,5 +26,18 @@
     @apply text-blue-600 underline;
 }
 
+.command-palette-content {
+    line-height: 1.5;
+    -webkit-text-size-adjust: 100%;
+    -moz-tab-size: 4;
+    -o-tab-size: 4;
+    tab-size: 4;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    margin: 0;
+    line-height: inherit;
+}
+
 @tailwind components;
 @tailwind utilities;
