--- a/pkg/server/view/index.templ
+++ b/pkg/server/view/index.templ
@@ -68,29 +68,25 @@ templ Index(feature Feature, stat Stat, item Item) {
               <div class="mt-24 sm:mt-32 lg:mt-16">
                 <a href="#" class="inline-flex space-x-6">
                   <span class="rounded-full bg-indigo-500/10 px-3 py-1 text-sm font-semibold leading-6 text-indigo-400 ring-1 ring-inset ring-indigo-500/20">
-                    Latest updates
-                  </span>
-                  <span class="inline-flex items-center space-x-2 text-sm font-medium leading-6 text-gray-300">
-                    <span>Just shipped v1.0</span>
+                  alpha
                   </span>
                 </a>
               </div>
               <h1 class="mt-10 text-4xl font-bold tracking-tight text-white sm:text-6xl">
-                Deploy to the cloud with confidence
+              justshare
               </h1>
               <p class="mt-6 text-lg leading-8 text-gray-300">
-                Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet
-                fugiat veniam occaecat fugiat aliqua.
+              share things with people
               </p>
               <div class="mt-10 flex items-center gap-x-6">
                 <a
-                  href="#"
+                  href="https://justshare.io"
                   class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400"
                 >
                   Get started
                 </a>
-                <a href="#" class="text-sm font-semibold leading-6 text-white">
-                  Live demo <span aria-hidden="true">→</span>
+                <a href="https://github.com/justshare-io/justshare" class="text-sm font-semibold leading-6 text-white">
+                  source code <span aria-hidden="true">→</span>
                 </a>
               </div>
             </div>
@@ -101,123 +97,52 @@ templ Index(feature Feature, stat Stat, item Item) {
           </div>
         </div>
 
-        <div class="mx-auto mt-8 max-w-7xl px-6 sm:mt-16 lg:px-8">
-          <h2 class="text-center text-lg font-semibold leading-8 text-white">
-            The world’s most innovative companies use our app
-          </h2>
-          <div class="mx-auto mt-10 grid max-w-lg grid-cols-4 items-center gap-x-8 gap-y-10 sm:max-w-xl sm:grid-cols-6 sm:gap-x-10 lg:mx-0 lg:max-w-none lg:grid-cols-5">
-            <img
-              class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-              src="https://tailwindui.com/img/logos/158x48/transistor-logo-white.svg"
-              alt="Transistor"
-              style="width: 158px; height: 48px"
-            />
-            <img
-              class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-              src="https://tailwindui.com/img/logos/158x48/reform-logo-white.svg"
-              alt="Reform"
-              style="width: 158px; height: 48px"
-            />
-            <img
-              class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-              src="https://tailwindui.com/img/logos/158x48/tuple-logo-white.svg"
-              alt="Tuple"
-              style="width: 158px; height: 48px"
-            />
-            <img
-              class="col-span-2 max-h-12 w-full object-contain sm:col-start-2 lg:col-span-1"
-              src="https://tailwindui.com/img/logos/158x48/savvycal-logo-white.svg"
-              alt="SavvyCal"
-              style="width: 158px; height: 48px"
-            />
-            <img
-              class="col-span-2 col-start-2 max-h-12 w-full object-contain sm:col-start-auto lg:col-span-1"
-              src="https://tailwindui.com/img/logos/158x48/statamic-logo-white.svg"
-              alt="Statamic"
-              style="width: 158px; height: 48px"
-            />
-          </div>
-        </div>
-
-        <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-56 lg:px-8">
+        <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-32 lg:px-8">
           <div class="mx-auto max-w-2xl text-center">
-            <h2 class="text-base font-semibold leading-7 text-indigo-400">Deploy faster</h2>
+            <h2 class="text-base font-semibold leading-7 text-indigo-400">Discover.</h2>
             <p class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">
-              Everything you need to deploy your app
+              Find or make a thing.
             </p>
             <p class="mt-6 text-lg leading-8 text-gray-300">
-              Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam voluptatum cupiditate veritatis in
-              accusamus quisquam.
+                You want to share something with someone. It could be a file, a link, a note, or another thing.
             </p>
-          </div>
-          <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-none">
-            <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-3">
-                <div class="flex flex-col">
-                  <dt class="text-base font-semibold leading-7 text-white">
-                    <div class="mb-6 flex h-10 w-10 items-center justify-center rounded-lg bg-indigo-500">
-                    </div>
-                    {feature.Name}
-                  </dt>
-                  <dd class="mt-1 flex flex-auto flex-col text-base leading-7 text-gray-300">
-                    <p class="flex-auto">{feature.Description}</p>
-                    <p class="mt-6">
-                      <a class="text-sm font-semibold leading-6 text-indigo-400">
-                        Learn more <span aria-hidden="true">→</span>
-                      </a>
-                    </p>
-                  </dd>
-                </div>
-            </dl>
           </div>
         </div>
 
-        <div class="mt-32 sm:mt-56">
-          <div class="mx-auto max-w-7xl px-6 lg:px-8">
-            <div class="mx-auto max-w-2xl sm:text-center">
-              <h2 class="text-base font-semibold leading-7 text-indigo-400">Everything you need</h2>
-              <p class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">No server? No problem.</p>
-              <p class="mt-6 text-lg leading-8 text-gray-300">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque,
-                iste dolor cupiditate blanditiis.
-              </p>
-            </div>
-          </div>
-          <div class="relative overflow-hidden pt-16">
-            <div class="mx-auto max-w-7xl px-6 lg:px-8">
-              <div class="relative" aria-hidden="true">
-                <div class="absolute -inset-x-20 bottom-0 bg-gradient-to-t from-gray-900 pt-[7%]" />
-              </div>
-            </div>
-          </div>
-          <div class="mx-auto mt-16 max-w-7xl px-6 sm:mt-20 md:mt-24 lg:px-8">
-            <dl class="mx-auto grid max-w-2xl grid-cols-1 gap-x-6 gap-y-10 text-base leading-7 text-gray-300 sm:grid-cols-2 lg:mx-0 lg:max-w-none lg:grid-cols-3 lg:gap-x-8 lg:gap-y-16">
-            <div class="relative pl-9">
-              <dt class="inline font-semibold text-white">
-                {feature.Name}
-              </dt>
-              <dd class="inline">{feature.Description}</dd>
-            </div>
-            </dl>
+        <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-32 lg:px-8">
+          <div class="mx-auto max-w-2xl text-center">
+            <h2 class="text-base font-semibold leading-7 text-indigo-400">Share.</h2>
+            <p class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">
+              Share it with people.
+            </p>
+            <p class="mt-6 text-lg leading-8 text-gray-300">
+            You want to share it with someone. You could share it with a friend, a group of friends, or the whole world. You want to put a thing in a place. heh.
+            </p>
           </div>
         </div>
 
-        <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-56 lg:px-8">
-          <div class="mx-auto max-w-2xl lg:mx-0 lg:max-w-xl">
-            <h2 class="text-base font-semibold leading-8 text-indigo-400">Our track record</h2>
+        <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-32 lg:px-8">
+          <div class="mx-auto max-w-2xl text-center">
+            <h2 class="text-base font-semibold leading-7 text-indigo-400">Protect.</h2>
             <p class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">
-              Trusted by thousands of developers&nbsp;worldwide
+                Control who gets to see it.
             </p>
             <p class="mt-6 text-lg leading-8 text-gray-300">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste
-              dolor cupiditate blanditiis ratione.
+                You want to control who gets to see it. Just for you. Just for your friends. Just for your friends and their friends. Just for the whole world.
             </p>
           </div>
-          <dl class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-10 text-white sm:mt-20 sm:grid-cols-2 sm:gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-4">
-              <div key={stat.Id} class="flex flex-col gap-y-3 border-l border-white/10 pl-6">
-                <dt class="text-sm leading-6">{stat.Name}</dt>
-                <dd class="order-first text-3xl font-semibold tracking-tight">{stat.Value}</dd>
-              </div>
-          </dl>
+        </div>
+
+        <div class="mx-auto mt-32 max-w-7xl px-6 sm:mt-32 lg:px-8">
+          <div class="mx-auto max-w-2xl text-center">
+            <h2 class="text-base font-semibold leading-7 text-indigo-400">Value.</h2>
+            <p class="mt-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">
+            Your thing is valuable.
+            </p>
+            <p class="mt-6 text-lg leading-8 text-gray-300">
+            You want to know who sees it. You want to know who likes it. You want to know who shares it. You want to know who comments on it. You want to know who makes a copy of it. You want to know who makes a derivative of it. You want to know who makes a derivative of a derivative of it. You want to know who makes a derivative of a derivative of a derivative of it. You want to know who makes a derivative of a derivative of a derivative of a derivative of it.
+            </p>
+          </div>
         </div>
 
         <div class="relative isolate mt-32 px-6 py-32 sm:mt-56 sm:py-40 lg:px-8">
@@ -236,45 +161,24 @@ templ Index(feature Feature, stat Stat, item Item) {
           </div>
           <div class="mx-auto max-w-2xl text-center">
             <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
-              Boost your productivity.
-              <br />
-              Start using our app today.
+            Don't think, write.
             </h2>
             <p class="mx-auto mt-6 max-w-xl text-lg leading-8 text-gray-300">
-              Incididunt sint fugiat pariatur cupidatat consectetur sit cillum anim id veniam aliqua proident excepteur
-              commodo do ea.
+            You have cool ideas. You want to share them with people. You don't want to think about how to do it. Just share.
             </p>
             <div class="mt-10 flex items-center justify-center gap-x-6">
               <a
-                href="#"
+                href="https://justshare.io"
                 class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
               >
                 Get started
               </a>
-              <a href="#" class="text-sm font-semibold leading-6 text-white">
+              <a href="https://github.com/justshare-io/justshare" class="text-sm font-semibold leading-6 text-white">
                 Learn more <span aria-hidden="true">→</span>
               </a>
             </div>
           </div>
         </div>
       </main>
-
-      <footer aria-labelledby="footer-heading" class="relative">
-        <h2 id="footer-heading" class="sr-only">
-          Footer
-        </h2>
-        <div class="mx-auto max-w-7xl px-6 pb-8 pt-4 lg:px-8">
-          <div class="border-t border-white/10 pt-8 md:flex md:items-center md:justify-between">
-            <div class="flex space-x-6 md:order-2">
-                <a key={item.Name} class="text-gray-500 hover:text-gray-400">
-                  <span class="sr-only">{item.Name}</span>
-                </a>
-            </div>
-            <p class="mt-8 text-xs leading-5 text-gray-400 md:order-1 md:mt-0">
-              &copy; 2020 Your Company, Inc. All rights reserved.
-            </p>
-          </div>
-        </div>
-      </footer>
     </div>
 }
