--- a/pkg/publish/templates/PaperMod/layouts/partials/home_info.html
+++ b/pkg/publish/templates/PaperMod/layouts/partials/home_info.html
@@ -16,8 +16,8 @@
             onsubmit="window.open('https://buttondown.email/breadchris', 'popupwindow')"
             class="embeddable-buttondown-form"
     >
-        <input type="email" name="email" id="bd-input" placeholder="join the email list" />
-        <input type="submit" id="bd-submit" value="Subscribe" />
+        <input class="input" type="email" name="email" id="bd-input" placeholder="join the email list" />
+        <input class="btn" type="submit" id="bd-submit" value="Subscribe" />
     </form>
 </article>
 {{- end -}}
