--- a/pkg/server/view/index.templ
+++ b/pkg/server/view/index.templ
@@ -80,7 +80,7 @@ templ Index(feature Feature, stat Stat, item Item) {
               </p>
               <div class="mt-10 flex items-center gap-x-6">
                 <a
-                  href="https://justshare.io"
+                  href="https://justshare.io/app"
                   class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400"
                 >
                   Get started
